log
Fri Mar 18 00:51:10 UTC 2022: 
 tests:  0|6
total_score: 0/70
3ea5d51
Fri Mar 18 01:30:57 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
d1b2076
Fri Mar 18 01:31:42 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2933b56
Sun Mar 20 05:01:46 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:42:16: error: ‘List {aka struct List}’ has no member named ‘first’
     return list->first->head;
                ^~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
935a23a
Sun Mar 20 05:02:31 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1e99293
Sun Mar 20 21:15:28 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:46:16: error: ‘List {aka struct List}’ has no member named ‘next’
     return list->next->data;
                ^~
list.c:47:25: error: ‘List {aka struct List}’ has no member named ‘next’
     list->current = list->next;
                         ^~
Compilation failed
43d954a
Sun Mar 20 21:16:20 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:46:12: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
     return node->next->data;
            ^~~~
            Node
list.c:46:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7e972b2
Sun Mar 20 21:16:35 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:46:12: error: expected expression before ‘Node’
     return Node->next->data;
            ^~~~
list.c:47:21: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
     list->current = node->next;
                     ^~~~
                     Node
list.c:47:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5b440d3
Sun Mar 20 21:17:13 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:46:12: error: expected expression before ‘Node’
     return Node* n->next->data;
            ^~~~
list.c:47:21: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
     list->current = node->next;
                     ^~~~
                     Node
list.c:47:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fc540c6
Sun Mar 20 21:17:30 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:46:12: error: expected expression before ‘Node’
     return Node* n->next->data;
            ^~~~
list.c:47:21: error: expected expression before ‘Node’
     list->current = Node->next;
                     ^~~~
Compilation failed
5af561b
Sun Mar 20 21:18:17 UTC 2022: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘nextList’:
list.c:47:16: error: ‘nodo’ is used uninitialized in this function [-Werror=uninitialized]
     return nodo->next->data;
            ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
74d4094
Sun Mar 20 21:19:17 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ca98372
Sun Mar 20 21:19:39 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘nextList’:
list.c:47:16: error: ‘nodo’ is used uninitialized in this function [-Werror=uninitialized]
     return nodo->next->data;
            ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e046bb
Sun Mar 20 21:19:49 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:46:11: error: array size missing in ‘nodo’
     Node* nodo[];
           ^~~~
list.c:47:16: error: ‘*(Node **)&nodo’ is a pointer; did you mean to use ‘->’?
     return nodo->next->data;
                ^~
                ->
list.c:48:25: error: ‘*(Node **)&nodo’ is a pointer; did you mean to use ‘->’?
     list->current = nodo->next;
                         ^~
                         ->
Compilation failed
a8afd0e
Sun Mar 20 21:19:58 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘nextList’:
list.c:47:16: error: ‘nodo’ is used uninitialized in this function [-Werror=uninitialized]
     return nodo->next->data;
            ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f597998
Sun Mar 20 21:29:25 UTC 2022: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:48:16: error: ‘List {aka struct List}’ has no member named ‘next’
     return list->next->data;
                ^~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
2788301
Sun Mar 20 21:30:11 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘nextList’:
list.c:49:13: error: ‘n’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     return n->next->data;
            ~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
41e9966
Sun Mar 20 21:31:07 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:49:27: error: expected identifier before ‘;’ token
     return list->current->;
                           ^
list.c:46:11: error: unused variable ‘n’ [-Werror=unused-variable]
     Node* n;
           ^
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
09a8f7e
Sun Mar 20 21:31:15 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
59dc7de
Sun Mar 20 21:32:39 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|5
total_score: 15/70
ec8475c
Sun Mar 20 21:34:10 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
6a29eb1
Sun Mar 20 21:34:53 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
e91c230
Sun Mar 20 21:35:10 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
ebd7bba
Sun Mar 20 21:42:58 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
6051ebe
Sun Mar 20 21:46:41 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
74cc141
Sun Mar 20 21:55:42 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
46a3666
Sun Mar 20 21:57:00 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
30b570a
